Fix post and switch to uri interpolation

--- a/core/test/resources/simple_post_person.yaml
+++ b/core/test/resources/simple_post_person.yaml
@@ -4,7 +4,7 @@ info:
   version: "1.0"
 paths:
   /person:
-    put:
+    post:
       tags:
         - person
       summary: Create an existing person
