--- a/core/test/resources/get_with_multiple_path_param.yaml
+++ b/core/test/resources/get_with_multiple_path_param.yaml
@@ -3,7 +3,7 @@ info:
   title: Entities
   version: "1.0"
 paths:
-  /person/{personId}:
+  /person/{personId}/{personName}:
     get:
       tags:
         - person
