--- a/core/test/resources/api/multiple_operations_with_same_tag.yaml
+++ b/core/test/resources/api/multiple_operations_with_same_tag.yaml
@@ -3,21 +3,25 @@ info:
   title: Entities
   version: "1.0"
 paths:
-  /person/{personId}:
+  /:
     get:
-      summary: Find person by ID
-      description: Returns a single person
-      operationId: getPersonById
-      parameters:
-        - name: personId
-          in: path
-          description: ID of person to return
-          required: true
-          schema:
-            type: integer
+      tags:
+        - person
+      operationId: getPerson
       responses:
         "200":
-          description: successful operation
+          description: ""
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Person"
+    put:
+      tags:
+        - person
+      operationId: putPerson
+      responses:
+        "200":
+          description: ""
           content:
             application/json:
               schema:
