--- a/core/test/resources/api/uri/get_with_optional_query_param.yaml
+++ b/core/test/resources/api/uri/get_with_optional_query_param.yaml
@@ -9,7 +9,7 @@ paths:
       parameters:
         - name: id
           in: query
-          required: true
+          required: false
           schema:
             type: string
       responses:
