--- a/core/test/resources/api/header/optional.yaml
+++ b/core/test/resources/api/header/optional.yaml
@@ -9,6 +9,9 @@ paths:
       parameters:
         - name: key
           in: header
-          required: true
+          required: false
           schema:
             type: string
+      responses:
+        "200":
+          description: ""
