--- a/core/test/resources/api/coproduct/discriminator_with_mapping.yaml
+++ b/core/test/resources/api/coproduct/discriminator_with_mapping.yaml
@@ -21,6 +21,9 @@ components:
         - $ref: "#/components/schemas/Organization"
       discriminator:
         propertyName: name
+        mapping:
+          john: "#/components/schemas/Person"
+          sml: "#/components/schemas/Organization"
     Person:
       required:
         - name
