--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@ name: CI
 
 on:
   push:
-    branches: ["**"]
-    tags: [v*]
+    branches: [ "**" ]
+    tags: [ v* ]
   pull_request:
-    branches: ["**"]
+    branches: [ "**" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -16,5 +16,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: coursier/cache-action@v5
-      - name: Run tests
+      - uses: olafurpg/setup-scala@v10
+        with:
+          java-version: adopt@1.11
+      - name: Run tests with mill
         run: ./mill _.test
+      - name: Run tests with sbt
+        run: sbt test
