--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,7 @@ jobs:
         run: ./mill _.test
       - name: Run tests with sbt
         run: sbt test
+      - name: Publish core locally
+        run: sbt core/publishLocal
+      - name: Run sbt-plugin tests
+        run: sbt scripted
