--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,19 +3,20 @@ pull_request_rules:
     conditions: []
     actions:
       delete_head_branch: {}
-  - name: automatic merge for scala-steward pull requests affecting build.sbt
+  - name: automatic merge for scala-steward pull requests affecting build.sbt and build.sc
     conditions:
       - author=scala-steward
-      - check-success=ci
-      - "#files=1"
+      - check-success=build
+      - "#files=2"
       - files=build.sbt
+      - files=build.sc
     actions:
       merge:
         method: merge
   - name: automatic merge for scala-steward pull requests affecting project plugins.sbt
     conditions:
       - author=scala-steward
-      - check-success=ci
+      - check-success=build
       - "#files=1"
       - files=project/plugins.sbt
     actions:
@@ -24,7 +25,7 @@ pull_request_rules:
   - name: semi-automatic merge for scala-steward pull requests
     conditions:
       - author=scala-steward
-      - check-success=ci
+      - check-success=build
       - "#approved-reviews-by>=1"
     actions:
       merge:
@@ -32,7 +33,7 @@ pull_request_rules:
   - name: automatic merge for scala-steward pull requests affecting project build.properties
     conditions:
       - author=scala-steward
-      - check-success=ci
+      - check-success=build
       - "#files=1"
       - files=project/build.properties
     actions:
@@ -41,7 +42,7 @@ pull_request_rules:
   - name: automatic merge for scala-steward pull requests affecting .scalafmt.conf
     conditions:
       - author=scala-steward
-      - check-success=ci
+      - check-success=build
       - "#files=1"
       - files=.scalafmt.conf
     actions:
