Support integer values in open product

--- a/core/src/test/resources/api/open_product/free_form.yaml
+++ b/core/src/test/resources/api/open_product/free_form.yaml
@@ -25,5 +25,4 @@ components:
           type: string
         age:
           type: integer
-      additionalProperties:
-        type: object
+      additionalProperties: true
