--- a/core/src/test/resources/api/pet_store.yaml
+++ b/core/src/test/resources/api/pet_store.yaml
@@ -320,6 +320,25 @@ paths:
         - petstore_auth:
             - write:pets
             - read:pets
+  /store/inventory:
+    get:
+      tags:
+        - store
+      summary: Returns pet inventories by status
+      description: Returns a map of status codes to quantities
+      operationId: getInventory
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties:
+                  type: integer
+                  format: int32
+      security:
+        - api_key: []
   /store/order:
     post:
       tags:
