--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
   publish:
     name: Publish release
     if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
-    needs: [ci]
+    needs: [build]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2.3.4
