Mergify: configuration update

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -57,3 +57,12 @@ pull_request_rules:
     actions:
       merge:
         method: merge
+  - name: automatic merge for dependabot pull requests affecting gha workflow
+    conditions:
+      - author~=^dependabot(|-preview)\[bot\]$
+      - check-success=ci
+      - "#files=1"
+      - files=.github/workflows/main.yml
+    actions:
+      merge:
+        method: merge
