Drop circe auto derivation

--- a/core/src/test/resources/api/uri/get_with_optional_query_param.yaml
+++ b/core/src/test/resources/api/uri/get_with_optional_query_param.yaml
@@ -14,21 +14,4 @@ paths:
             type: string
       responses:
         "200":
-          description: ""
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Person"
-components:
-  schemas:
-    Person:
-      required:
-        - name
-        - age
-      type: object
-      properties:
-        name:
-          type: string
-        age:
-          type: integer
-          minimum: 11
+          description: successful operation
