Update scalafmt configuration

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "2.7.5"
+version = "3.0.0-RC7"
 
 rewrite {
   rules = [
@@ -9,3 +9,4 @@ rewrite {
 }
 newlines.afterCurlyLambdaParams=squash
 rewrite.redundantBraces.stringInterpolation = true
+runner.dialect = scala213source3
