--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-sbt:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - uses: coursier/cache-action@v6
+      - uses: olafurpg/setup-scala@v13
+        with:
+          java-version: adopt@1.11
+      - name: Run tests with sbt
+        run: sbt test
+      - name: Run sbt-plugin tests
+        run: sbt scripted
+
+  build-mill:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2.3.4
@@ -21,10 +34,16 @@ jobs:
           java-version: adopt@1.11
       - name: Run tests with mill
         run: ./mill _.test
-      - name: Run tests with sbt
-        run: sbt test
-      - name: Run sbt-plugin tests
-        run: sbt scripted
+
+  generate-lsif:
+    runs-on: ubuntu-20.04
+    needs: [build-sbt, build-mill]
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - uses: coursier/cache-action@v6
+      - uses: olafurpg/setup-scala@v13
+        with:
+          java-version: adopt@1.11
       - name: Generate LSIF
         run: curl -fLo coursier https://git.io/coursier-cli && chmod +x coursier && ./coursier launch com.sourcegraph:lsif-java_2.13:0.7.3 -- index
       - name: Upload LSIF data
@@ -37,7 +56,7 @@ jobs:
   publish:
     name: Publish release
     if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
-    needs: [build]
+    needs: [build-sbt, build-mill]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2.3.4
