Switch to millw

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           java-version: adopt@1.11
       - name: Run tests with mill
-        run: ./mill _.test
+        run: ./millw _.test
 
   generate-lsif:
     runs-on: ubuntu-20.04
