--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: coursier/cache-action@v6
       - uses: olafurpg/setup-scala@v13
+        with:
+          java-version: adopt@1.11
       - run: sbt ci-release
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
@@ -79,7 +82,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: coursier/cache-action@v6
       - uses: olafurpg/setup-scala@v13
+        with:
+          java-version: adopt@1.11
       - name: Setup GPG secrets for publish
         run: |
           gpg --version
