--- a/.mergify.yml
+++ b/.mergify.yml
@@ -6,7 +6,9 @@ pull_request_rules:
   - name: automatic merge for scala-steward pull requests affecting build.sbt and build.sc
     conditions:
       - author=scala-steward
-      - check-success=build
+      - check-success=build-sbt
+      - check-success=build-mill
+      - check-success=generate-lsif
       - "#files=2"
       - files=build.sbt
       - files=build.sc
@@ -16,7 +18,9 @@ pull_request_rules:
   - name: automatic merge for scala-steward pull requests affecting project plugins.sbt
     conditions:
       - author=scala-steward
-      - check-success=build
+      - check-success=build-sbt
+      - check-success=build-mill
+      - check-success=generate-lsif
       - "#files=1"
       - files=project/plugins.sbt
     actions:
@@ -25,7 +29,9 @@ pull_request_rules:
   - name: semi-automatic merge for scala-steward pull requests
     conditions:
       - author=scala-steward
-      - check-success=build
+      - check-success=build-sbt
+      - check-success=build-mill
+      - check-success=generate-lsif
       - "#approved-reviews-by>=1"
     actions:
       merge:
@@ -33,7 +39,9 @@ pull_request_rules:
   - name: automatic merge for scala-steward pull requests affecting project build.properties
     conditions:
       - author=scala-steward
-      - check-success=build
+      - check-success=build-sbt
+      - check-success=build-mill
+      - check-success=generate-lsif
       - "#files=1"
       - files=project/build.properties
     actions:
@@ -42,7 +50,9 @@ pull_request_rules:
   - name: automatic merge for scala-steward pull requests affecting .scalafmt.conf
     conditions:
       - author=scala-steward
-      - check-success=build
+      - check-success=build-sbt
+      - check-success=build-mill
+      - check-success=generate-lsif
       - "#files=1"
       - files=.scalafmt.conf
     actions:
@@ -51,7 +61,9 @@ pull_request_rules:
   - name: automatic merge for scala-steward pull requests affecting project Versions.scala
     conditions:
       - author=scala-steward
-      - check-success=ci
+      - check-success=build-sbt
+      - check-success=build-mill
+      - check-success=generate-lsif
       - "#files=1"
       - files=project/Versions.scala
     actions:
