--- a/.github/workflows/dependency-graph.yml
+++ b/.github/workflows/dependency-graph.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: coursier/cache-action@v6
-      - uses: actions/setup-java@v3
+      - uses: olafurpg/setup-scala@v13
         with:
           java-version: adopt@1.11
 
