--- a/core/src/test/resources/api/coproduct/one_of/int_discriminator_with_mapping.yaml
+++ b/core/src/test/resources/api/coproduct/one_of/int_discriminator_with_mapping.yaml
@@ -21,6 +21,9 @@ components:
         - $ref: "#/components/schemas/Organization"
       discriminator:
         propertyName: name
+        mapping:
+          1: "#/components/schemas/Person"
+          2: "#/components/schemas/Organization"
     Person:
       required:
         - name
