--- a/.github/workflows/sourcegraph.yml
+++ b/.github/workflows/sourcegraph.yml
@@ -17,7 +17,7 @@ jobs:
           apps: scip-java
 
       - name: Generate SCIP File
-        run: scip-java index --build-tool=mill
+        run: scip-java index --build-tool=sbt
 
       - name: Install src
         run: yarn global add @sourcegraph/src
