--- a/core/src/test/resources/openapi/enum_flattener/response_body_expected.yaml
+++ b/core/src/test/resources/openapi/enum_flattener/response_body_expected.yaml
@@ -3,13 +3,14 @@ info:
   title: Entities
   version: "1.0"
 servers:
-  - url: /
+- url: /
 paths:
   /:
     get:
       operationId: getRoot
       responses:
         "200":
+          description: ""
           content:
             application/json:
               schema:
@@ -19,5 +20,5 @@ components:
     GetRoot:
       type: string
       enum:
-        - a
-        - b
+      - a
+      - b
